--- a/style.css
+++ b/style.css
@@ -2,13 +2,21 @@ body {
   margin: 0;
   padding: 0;
 }
-.name-header {
+header {
   background: aquamarine;
+}
+.header-title {
   padding: 2rem;
   margin: 0;
   font-size: xxx-large;
   text-align: center;
   text-transform: uppercase;
+  padding-bottom: 0;
+}
+.header-bio {
+  padding: 0.25rem 1.5rem 2rem 1.5rem;
+  text-align: center;
+  font-size: medium;
 }
 .resume-content {
   display: flex;
